--- a/index.css
+++ b/index.css
@@ -20,3 +20,8 @@ body{
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 border: none;
 }
+
+.quotes-space{
+    font-family: 'Croissant One', cursive;
+    text-align: center;
+}
