--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ body{
     height: 1024px;
     width: 1444px;
     background: radial-gradient(56.18% 111.1% at 50% 50%, #D549B6 0%, rgba(217, 117, 117, 0) 100%);
+    text-align: center;
 }
 
 .header-text{
@@ -12,13 +13,18 @@ body{
     font-size: 40px;
 }
 
+.button-container{
+    align-items: center;
+    padding-top: 80px;
+}
+
 .button{
     height: 50px;
     width: 200px;
     border-radius: 40px;
     background: linear-gradient(178.23deg, #FFFFFF 1.5%, #956196 98.51%);
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border: none;
 }
 
 .quotes-space{
