--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     height: 1024px;
     width: 1444px;
-    background: radial-gradient(56.18% 111.1% at 50% 50%, #D549B6 0%, rgba(217, 117, 117, 0) 100%);
+    background: radial-gradient(56.18% 111.1% at 50% 50%, #0e1da5 0%, rgba(217, 117, 117, 0) 100%);
     text-align: center;
 }
 
